search for users

--- a/src/app/organization/organization.component.html
+++ b/src/app/organization/organization.component.html
@@ -1,6 +1,6 @@
 <form>
   <div class="md-form">
-    <label>Enter Organization Login Name: </label>
+    <label>Enter Organization Login Name: </label><br>
     <input mdbInput type="login" class="form-control" name="login"  [(ngModel)]="login" placeholder="Orgnization Login"> 
   </div>
   <button type="submit" mdbBtn color="primary" (click)="getOrganizationDetails()">Search</button>
