--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to Github API!
-  </h1>
-</div>
-
-<app-organization></app-organization>
-<app-user></app-user>
-
+<nav class="navbar navbar-fixed-top bg-inverse text-white">
+  <div class="container">
+      <a class="navbar-brand">Github Browser</a>
+      <ul class="nav" routerLinkActive="active">
+          <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="user">Users</a></li>
+          <li class="nav-item"><a class="nav-link" routerLink="organization">Organizations</a></li>
+      </ul>
+  </div>
+</nav>
 
 <router-outlet></router-outlet>
