--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
-<p>
-  home works!
-</p>
+<div class="card mr-5 ml-5 mt-5">
+  <div class="card-header">
+    Welcome!
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Github Browser for efficient comparisons.</h5>
+    <p class="card-text">This browser can be used to compare two users or two organizations with each other, in order to get an insight of their similarities and differences. </p>
+    <p class="card-text"> Click on the tabs "Users" and "Organizations" to see more.</p>
+  </div>
+</div>
