--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,14 +1,37 @@
-<form>
-  <div class="md-form">
-    <label>Enter Username: </label><br>
-    <input mdbInput type="username" class="form-control" name="username" [(ngModel)]="username" placeholder="Username">
-  </div>
-  <button type="submit" mdbBtn color="primary" (click)="searchUser()">Search</button>
-</form>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col">
+      <form>
+        <div class="md-form">
+          <label>Enter Username: </label><br>
+          <input mdbInput type="username" class="form-control" name="username" [(ngModel)]="username"
+            placeholder="Username">
+        </div>
+        <button class="btn btn-primary mt-2 mb-3" type="submit" mdbBtn color="primary" (click)="searchUser()">Search</button>
+      </form>
+      <div *ngIf="status">
+        <strong>Public Repositories: </strong><br>
+        <div *ngFor="let repository of repositories">
+          {{repository.name}}
+        </div>
+      </div>
+    </div>
 
-<div *ngIf="status">
-  <strong>Public Repositories: </strong><br>
-  <div *ngFor="let repository of repositories">
-      {{repository.name}}
+    <div class="col">
+      <form>
+        <div class="md-form">
+          <label>Enter Username: </label><br>
+          <input mdbInput type="username2" class="form-control" name="username2" [(ngModel)]="username2"
+            placeholder="Username">
+        </div>
+        <button class="btn btn-primary mt-2 mb-3" type="submit" mdbBtn color="primary" (click)="searchUser2()">Search</button>
+      </form>
+      <div *ngIf="status2">
+        <strong>Public Repositories: </strong><br>
+        <div *ngFor="let repository of repositories2">
+          {{repository.name}}
+        </div>
+      </div>
+    </div>
   </div>
 </div>
